--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "platinum-elements": "PolymerElements/platinum-elements#^1.1.0",
     "polymer": "Polymer/polymer#^1.2.0",
     "paper-menu": "PolymerElements/paper-menu#4fecb43601",
-    "paper-slider": "PolymerElements/paper-slider#~1.0.8"
+    "paper-slider": "PolymerElements/paper-slider#~1.0.8",
+    "firebase-element": "GoogleWebComponents/firebase-element#~1.0.9"
   },
   "devDependencies": {
     "web-component-tester": "*"
