--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "polymer": "Polymer/polymer#^1.2.0",
     "paper-menu": "PolymerElements/paper-menu#4fecb43601",
     "paper-slider": "PolymerElements/paper-slider#~1.0.8",
-    "firebase-element": "GoogleWebComponents/firebase-element#~1.0.9"
+    "firebase-element": "GoogleWebComponents/firebase-element#~1.0.9",
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#~1.0.11"
   },
   "devDependencies": {
     "web-component-tester": "*"
